erDiagram
  USERS ||--o{ SERVICES : jual
  USERS ||--o{ JOBS : pasang
  USERS ||--o{ APPLICATIONS : lamar
  USERS ||--o{ ORDERS : beli_atau_kerja
  USERS ||--o{ USER_PORTFOLIOS : punya
  CATEGORIES ||--o{ SERVICES : klasifikasi
  CATEGORIES ||--o{ JOBS : klasifikasi
  JOBS ||--o{ APPLICATIONS : masuk
  APPLICATIONS ||--o| ORDERS : menjadi
  SERVICES ||--o{ ORDERS : disewa
  ORDERS ||--o{ PAYMENTS : dibayar
  ORDERS ||--o{ WORK_SUBMISSIONS : bukti
  ORDERS ||--o{ REVIEWS : nilai

  USERS {
    bigint id PK
    varchar email
    varchar password_hash
    varchar ktp_status
    varchar bank_status
  }
  SERVICES {
    bigint id PK
    bigint seller_id FK
    int price
    tinyint is_active
  }
  JOBS {
    bigint id PK
    bigint buyer_id FK
    int budget
    varchar status
    tinyint is_active
  }
  APPLICATIONS {
    bigint id PK
    bigint job_id FK
    varchar status
    varchar reject_kind
  }
  ORDERS {
    bigint id PK
    varchar source
    varchar status
    varchar escrow
  }
  PAYMENTS {
    bigint id PK
    bigint order_id FK
    varchar status
  }
